build with Java 17